SEM2/COD7001/LABS/LAB6/cstn6/src/master_tests/invalid/bad_17.lang
var x = 17 var y = 10;